--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 version "0.1"
-group "app.scan"
+group "app.scan2"
 
 apply plugin:"eclipse"
 apply plugin:"idea"
@@ -33,6 +33,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
+    compile group: 'org.zaproxy', name: 'zap-clientapi', version: '1.2.0'
     compile "org.grails.plugins:cache"
     compile "org.grails.plugins:scaffolding"
     compile "org.grails.plugins:hibernate5"
