--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ build/
 .project
 .settings
 .classpath
+
+*.class
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
